--- a/files/ENGtxt.html
+++ b/files/ENGtxt.html
@@ -48,6 +48,6 @@ function Receive() {
 <DIV id='Continut' contentEditable='true'></DIV>
 <hr>
 <INPUT id='out' class='Inp' type='button' value='Save Content' onClick='rSave()'/>
-<a href='down' class='Inp'>Download eng.txt</a>
+<a href='down/eng.txt' class='Inp'>Download eng.txt</a>
 </body>
 </html>
