--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 Styling pages:<br/>
 <ul>
-	<li><a class='hl' href="files/ProEmail.html">Pro Email (simple)</a></li>
+	<li><a class='hl' href="files/ProEmail.html">Email (simple)</a></li>
 	<li><a class='hl' href="files/pros.html">Pro Style Email</a></li>
 	<li><a class='hl' href="files/prostyle.html">Pro Style Extended Email</a></li>
 	<li><a class='hl' href="files/ProEmailAuto.html">Auto Pro Email Styling</a></li>
