--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ Styling pages:<br/>
 	<li><a class='hl' href="files/rtf.html">Rich Text Editor</a></li>
 	<li><a class='hl' href="files/ENGtxt.html">English (Text)</a></li>
 </ul>
+Utilities:<br/>
+<ul>
+	<li><a class='hl' href="files/EUR_USD_Rates.html">EUR:USD Exchange Rates</a></li>
+</ul>
 Cloud pages:<br/>
 <ul>
 	<li><a class='hl' href="http://the-postviorel.rhcloud.com">Red Hat (Linux) OpenShift</a></li>
