--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <link rel="shortcut icon" href="files/favicon.ico" type="image/x-icon" />
 <STYLE>
 .hl { font: normal 14pt "Luicda Console", monospace; text-decoration: none; color: black; padding-right:6px; padding-left:6px; }
-.hl:hover { background: black; color: white; }
+.hl:hover { background-color:black; color: white; }
 </STYLE>
 </HEAD>
-<BODY style='font: bold 14pt "Luicda Console", monospace;'>
+<BODY style='font: bold 14pt "Luicda Console", monospace; background-color:white'>
 
 Styling pages:<br/>
 <ul>
