--- a/files/ProEmail.html
+++ b/files/ProEmail.html
@@ -14,9 +14,9 @@ function ImpData(culoare)
 var fntsNum = 4, arr = [];
 function Simplify(ob){
   var ts, fnts = [{'name':'Serif!', 'value':'serif', 'size':'12pt'},
-    {'name':'Sans!', 'value':'sans-serif', 'size':'10pt'},
     {'name':'Verdana', 'value':'Verdana,sans-serif', 'size':'10pt'},
-    {'name':'Courier', 'value':'"Courier New",Courier', 'size':'10pt'},
+    {'name':'Calibri', 'value':'Calibri,sans-serif', 'size':'11pt'},
+    {'name':'Sans!', 'value':'sans-serif', 'size':'10pt'},
     {'name':'None!', 'value':null, 'size':null}
   ];
   fntsNum++; if(fntsNum >= fnts.length) fntsNum = 0; ob.value = fnts[fntsNum].name;
