--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <title>Index File</title>
 <link rel="shortcut icon" href="files/favicon.ico" type="image/x-icon" />
-<STYLE>
-.hl { font: normal 14pt "Luicda Console", monospace; text-decoration: none; color: black; padding-right:6px; padding-left:6px; }
-.hl:hover { background-color:black; color: white; }
+<STYLE type="text/css">
+LI { margin: 10px; }
+.hl { font: normal 14pt "Luicda Console", monospace; text-decoration: none; text-shadow: 0px 2px 3px black; color: white; padding-left:6px; padding-right:6px; }
+/* .hl:hover { background-color:#2B3151; opacity: .5; border-radius:8px;} */
+.hl:hover {
+	background-color:#2B3151; opacity: .5; border-radius:8px;
+	-webkit-animation: fade_in .4s linear 0s infinite alternate;
+	animation: fade_in .4s linear 0s infinite alternate;
+}
+@-webkit-keyframes fade_in { from {opacity: .3;} to {opacity: .8;} }
+@keyframes fade_in { from {opacity: .3;} to {opacity: .8;} }
+
+BODY {
+	
+	background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAIAAAAmkwkpAAAAF0lEQVQImWMsr1/KAANMDEgAB0dCXBAAUaMB449B1X8AAAAASUVORK5CYII=');
+}
 </STYLE>
 </HEAD>
 <BODY style='font: bold 14pt "Luicda Console", monospace; background-color:white'>
