Plus English and German

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ Styling pages:<br/>
 Utilities:<br/>
 <ul>
 	<li><a class='hl' href="files/EUR_USD_Rates.html">EUR:USD Exchange Rates</a></li>
+	<li><a class='hl' href="files/aENG.html">English phrasebook</a></li>
+	<li><a class='hl' href="files/aGER.html">German phrasebook</a></li>
 </ul>
 Cloud pages:<br/>
 <ul>
